cmake_minimum_required(VERSION 3.5)
project(MyProject CXX)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
option(ENABLE_TESTS OFF)

if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(SEND_ERROR "In-source builds are not allowed")
endif()

if(UNIX)
    set(CMAKE_CXX_FLAGS "-Wall -std=c++14")
    set(CMAKE_CXX_RELEASE_FLAGS "-O2")
    set(CMAKE_CXX_DEBUG_FLAGS "-g3 -fsanitize=leak -fsanitise=address")
endif()

if(ENABLE_TESTS)
    enable_testing()
    find_package(GTest)
    file(GLOB DOWNLOADED_GTEST ${CMAKE_SOURCE_DIR}/3rd/google*)
    if(!GTEST_FOUND OR EXISTS(${DOWNLOADED_GTEST}))
        message("GTest not found. Downloading from github release will start soon.")
        file(DOWNLOAD https://github.com/google/googletest/archive/release-1.8.0.zip ${CMAKE_SOURCE_DIR}/3rd/gtest.zip SHOW_PROGRESS)
        message("Unpacking...")
        execute_process(COMMAND unzip ${CMAKE_SOURCE_DIR}/3rd/gtest.zip -d ${CMAKE_SOURCE_DIR}/3rd)
        execute_process(COMMAND rm ${CMAKE_SOURCE_DIR}/3rd/gtest.zip)
        file(GLOB DOWNLOADED_GTEST ${CMAKE_SOURCE_DIR}/3rd/google*)
        add_subdirectory(${DOWNLOADED_GTEST})
        set(GTEST_LIBRARIES gtest)
        set(GTEST_MAIN_LIBRARIES gtest_main)
        set(GTEST_BOTH_LIBRARIES gtest gtest_main)
    endif()
    include_directories(${GTEST_INCLUDE_DIRS})
    add_executable(main main.cpp)
    target_link_libraries(main ${GTEST_BOTH_LIBRARIES})
    add_test(test main)
endif()

